--- a/index.html
+++ b/index.html
@@ -7,9 +7,9 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body >
-    
+    <h1 >HeartDisease</h1>
     <div class="wrapper">
-        <h1>HeartDisease</h1>
+        <!-- <h1>HeartDisease</h1> -->
         <div class="container">
             
             <table class="table">
